# crhandle

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clangbuild.sh
.github/workflows/: cmake.yml  lint.yml
src/: CMakeLists.txt
src/include/crhandle/: coroutine.hpp  detachedhandle.hpp  task.hpp  taskhandle.hpp  taskowner.hpp  taskutils.hpp  unichannel.hpp
test/: CMakeLists.txt  counter.hpp  dispatcher.hpp  test_taskhandle.cpp  test_taskowner.cpp  test_taskutils.cpp  test_unichannel.cpp
